--- a/RDeployment/src/main/resources/application.conf
+++ b/RDeployment/src/main/resources/application.conf
@@ -9,7 +9,7 @@ db {
   default {
     slick.driver=scala.slick.driver.MySQLDriver
     driver=com.mysql.jdbc.Driver
-    url="jdbc:mysql://localhost/slicktest?characterEncoding=UTF-8"
+    url="jdbc:mysql://localhost/Graphene?characterEncoding=UTF-8"
     user="root"
     password="root"
 	host="localhost"
@@ -17,7 +17,7 @@ db {
   test {
     slick.driver=scala.slick.driver.H2Driver
     driver=org.h2.Driver
-    url="jdbc:h2:mem:slicktest"
+    url="jdbc:h2:mem:Graphene"
     user="sa"
     password=""
   }
